Thu Dec 16 15:45:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GormWindowEditor.m: Implemented support for moving and resizing
	subviews within a window.
	* Gorm.m: Implemented edit menu (mostly) with cut and paste.

Thu Dec 16  6:54:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GormWindowEditor.m: Implemented selection mechanism including
	marking subviews within a window by drawing knobs on them.

Wed Dec 15 15:27:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Archive save/restore fixes.
	Implementation of framework for interactive testing mode.

Tue Dec 14 20:13:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Enough for today.
	* View/View.m: Added a single button to the 'View' palette.
	* GormPaletteManager.m: improve DnD image ffset code.
	* GormWindowEditor.m: accept dropped views in window.
 
Tue Dec 14 19:53:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Removed GormResourcesManager - merged functionality into GormDocument
	Loads of other minor changes too - hopefully all simplified a bit.

Tue Dec 14 17:33:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GormDocument.m: Major changes - nearly all methods implemented to
	including all the editor related methods.
	* GormWindowEditor.m: Loads of stuff fleshed out, mostly just leaving
	drawing code to do.

Mon Dec 13 20:04:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GormViewKnobs.m: imported from IM

Mon Dec 13 14:57:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Gorm.h: Added NSView additions
	* GormWindowEditor.m: new skeleton file.
	* GormDocument.m: handle class replacement on archiving/unarchiving.
	Add filesOwner and firstResponder dummy objects.
	* GormResourcesManager.m: tidy files owner and first responder stuff.
	* GormObjectEditor.m:  Use neater mechanism for determining image to
	be displayed in matrix.
